# study

./: .gitignore
ai-study/: D1.py  D2.py
ai-study/phase1/: D3.py  D4.py
ai-study/phase1/fetcher/: pyproject.toml
ai-study/phase1/fetcher/src/fetcher/: __init__.py  cli.py
ai-study/phase1/fetcher/tests/: test_client.py
learning/: index.md
learning/ai-learning-roadmap/: 00-overview.md  01-resources.md  README.md  daily-schedule.md  phase1-python.md  phase2-llm-api.md  phase3-rag.md  phase4-engineering.md  phase5-agent.md  phase6-concurrency.md  phase7-distributed.md  phase8-project.md  pitfalls.md
learning/aviatorscript-5.0/: beginner-guide.md
learning/learning-plan-v2/: 00-overview.md  01-resources.md  README.md  daily-schedule.md  phase1-python.md  phase2-llm-prompt.md  phase3-rag.md  phase4-engineering.md  phase5-agent.md  phase6-advanced.md  pitfalls.md  (+2 more)
multi-agent-rag/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
multi-agent-rag/docs/specs/: 2026-03-31-multi-agent-rag-design.md
multi-agent-rag/docs/superpowers/plans/: 2026-03-31-phase1-core-system.md
multi-agent-rag/src/: cli.py  config.py
multi-agent-rag/src/agents/: __init__.py  analyzer.py  base.py  orchestrator.py  retriever.py
multi-agent-rag/src/infrastructure/: __init__.py  embedding.py  llm_client.py  message.py  message_bus.py  vector_store.py
multi-agent-rag/src/rag/: chunker.py  ingest.py
multi-agent-rag/src/rag/parser/: __init__.py  base.py  markdown.py  pdf.py
multi-agent-rag/tests/: test_analyzer.py  test_base_agent.py  test_chunker.py  test_config.py  test_embedding.py  test_ingest.py  test_integration.py  test_llm_client.py  test_message.py  test_message_bus.py  test_orchestrator.py  test_parsers.py  test_retriever.py  test_vector_store.py
rag-kb/: CLAUDE.md  config.yaml  requirements.txt
(+39 files in other folders)
